Project1/Project1_kind_prometheus_grafana/kind/flask-chart/templates/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flask-route
spec:
  entryPoints:
    - web
  routes:
    #- match: Host("flask.local") && PathPrefix(`/api`)
    - match: Host(`flask.local`)
      kind: Rule
#      middlewares:
#       - name: middle-api
      services:
        - name: flask-service
          port: 5000
